--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/Rumtikitum/SocialMediaBackend/issues"
   },
-  "homepage": "https://github.com/Rumtikitum/SocialMediaBackend#readme"
+  "homepage": "https://github.com/Rumtikitum/SocialMediaBackend#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "moment": "^2.29.1",
+    "mongoose": "^5.13.7"
+  }
 }
